finish initial index page

--- a/app/views/users/_list.erb
+++ b/app/views/users/_list.erb
@@ -4,7 +4,8 @@
       <a href="/users/<%= user.id %>">
         <%= user.username %>
       </a><br>
-      <%= user.first_name, user.last_name %>
+      <%= user.first_name %>
+      <%= user.last_name %>
     </li>
   </ul>
 <% end %>
