--- a/app/views/signin.erb
+++ b/app/views/signin.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <h1>Please Sign Into Wooter!!!</h1>
   <%= @error %>
-   <form action="/login" method="post">
-    <input type="text" name="user[username]" placeholder="Username" />
-    <input type="text" name="user[password_hash]" placeholder="Password" />
+   <form action="/signin" method="post">
+    <input type="text" name="username" placeholder="Username" />
+    <input type="text" name="password_hash" placeholder="Password" />
     <input type="submit" value="Sign In" />
   </form>
    <a href="/signup"><input type="submit" value="Create New User" /></a>
