--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -16,6 +16,10 @@
 <form class="pages"  action="/users/<%= current_user.id %>/fans">
   <input type="submit" value="Check Out your Fans! ( <%= current_user.fans.count %> )" />
 </form>
+
+<form class="pages"  action="/users">
+  <input type="submit" value="Find More WOOTERS!" />
+</form>
 </div>
 
 <h2>Here's what your stars are up to...</h2>
