--- a/app/views/signin.erb
+++ b/app/views/signin.erb
@@ -4,9 +4,9 @@
   <%= @error %>
    <form action="/signin" method="post">
     <input type="text" name="username" placeholder="Username" />
-    <input type="text" name="password_hash" placeholder="Password" />
+    <input type="password" name="password_hash" placeholder="Password" />
     <input class="homes" type="submit" value="Sign In" />
   </form>
-   <form href="/signup"><input class="homes" type="submit" value="Create New User" /></a>
+   <form action="/signup"><input class="homes" type="submit" value="Create New User" /></a>
 </div>
 
