--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -6,8 +6,8 @@
     <input name="user[email]" placeholder="Email" />
     <input name="user[first_name]" placeholder="First Name" />
     <input name="user[last_name]" placeholder="Last Name" />
-    <input name="user[password_hash]" placeholder="Password" />
-    <input name="password_hash_verify" placeholder="Verify Password" />
+    <input type="password" name="user[password_hash]" placeholder="Password" />
+    <input type="password" name="password_hash_verify" placeholder="Verify Password" />
     <input type="submit" value="Sign up" />
   </form>
 </div>
