Add dis shiiiiii

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,7 +1,7 @@
 
 <form method="POST" action="/welcome">
-  <input id="woot_text" type="text" name="body" placeholder="Can I get a WOOT?!" />
-  <input id="woot_button" type="submit" value="WOOT!"/>
+  <input id="woot_text" type="text" name="body" placeholder="Can I get a WOOT?!" >
+  <input id="woot_button" type="submit" value="WOOT!">
 </form>
 
 <div id="pages">
@@ -14,8 +14,14 @@
 </form>
 
 <form class="pages"  action="/users/<%= current_user.id %>/fans">
-  <input type="submit" value="Check Out your Fans! ( <%= current_user.fans.count %> )" />
+  <input type="submit" value="Check Out your Fans! ( <%= current_user.fans.count %> )" >
 </form>
+
+<form class="pages"  action="/users">
+  <input type="submit" value="Check Out All Wooters! ( <%= User.all.count %> )" >
+</form>
+
+
 </div>
 
 <h2>Here's what your stars are up to...</h2>
