--- a/app/views/signin.erb
+++ b/app/views/signin.erb
@@ -7,6 +7,7 @@
     <input type="text" name="password_hash" placeholder="Password" />
     <input class="homes" type="submit" value="Sign In" />
   </form>
-   <form href="/signup"><input class="homes" type="submit" value="Create New User" /></a>
+   <form action="/signup"><input class="homes" type="submit" value="Create New User" />
+  <img class="home_image" src ="http://i.imgur.com/UlXlciU.png" />
 </div>
 
