--- a/public/css/application.css
+++ b/public/css/application.css
@@ -28,7 +28,7 @@ body {
 }
 
 .pages {
-  margin-left: 40px;
+  margin-left: 1px;
 }
 
 #pages {
@@ -76,4 +76,11 @@ input[type=text] {
   width: 200px;
   padding: 3px;
   margin-top: 20px;
+}
+
+.home_image {
+  position: absolute;
+  top: 10px;
+  right: 0px;
+  margin-right: 23.5%;
 }
