--- a/app/views/signin.erb
+++ b/app/views/signin.erb
@@ -4,7 +4,7 @@
   <%= @error %>
    <form action="/signin" method="post">
     <input type="text" name="username" placeholder="Username" />
-    <input type="password" name="password_hash" placeholder="Password" />
+    <input id="pw" type="password" name="password_hash" placeholder="Password" />
     <input class="homes" type="submit" value="Sign In" />
   </form>
 
